--- a/P3/templates/livro.html
+++ b/P3/templates/livro.html
@@ -11,6 +11,7 @@
     Editora: {{livro.editora}} <br>
     Categoria: {{livro.categoria}} <br>
     Numero de páginas: {{livro.numero_paginas}} <br>
+    Resumo: {{livro.resumo}} <br>
 
     LISTA DE EXEMPLARES É NO GRAFICO
 </body>
