--- a/P3/templates/livro.html
+++ b/P3/templates/livro.html
@@ -3,16 +3,55 @@
 <head>
     <meta charset='utf-8'>
     <title>Livro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="styles.css" rel="stylesheet" />
 </head>
-<body>
-    <h1>Dados de um livro</h1>
-    Nome: {{livro.nome}} <br>
-    Autor: {{livro.autor}} <br>
-    Editora: {{livro.editora}} <br>
-    Categoria: {{livro.categoria}} <br>
-    Numero de páginas: {{livro.numero_paginas}} <br>
-    Resumo: {{livro.resumo}} <br>
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+       <div class="container">
+           <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+               Menu
+               <i class="fas fa-bars ms-1"></i>
+           </button>
+           <div class="collapse navbar-collapse" id="navbarResponsive">
+               <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Ranking</a></li>
+                    <form action="/livros" method="GET">
+                        <li class="nav-item"><button class="btn-nav nav-link">Livros</button></li>
+                      </form>
+                 </ul>
+           </div>
+       </div>
+   </nav>
 
-    LISTA DE EXEMPLARES É NO GRAFICO
+   <section class="mt-5 page-section" id="services">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">{{livro.nome}}</h2>
+            <h3 class="section-subheading text-muted">{{livro.resumo}}.</h3>
+            <p class="text-muted"> <strong>Autor:</strong> {{livro.autor}} <br></p>
+            <p class="text-muted"><strong> Editora:</strong> {{livro.editora}}</p>
+            <p class="text-muted"><strong>Categoria:</strong> {{livro.categoria}}</p>
+            <p class="text-muted"><strong> Numero de páginas:</strong> {{livro.numero_paginas}}</p>
+            <p class="text-muted"></p>
+        </div>
+        LISTA DE EXEMPLARES É NO GRAFICO
+    </div>
+    </section>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
