--- a/P3/templates/livros.html
+++ b/P3/templates/livros.html
@@ -3,9 +3,79 @@
 <head>
     <meta charset='utf-8'>
     <title>Livros</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="styles.css" rel="stylesheet" />
 </head>
-<body>
-    <h1>Lista de livros</h1>
+<body id="page-top">
+     <!-- Navigation-->
+     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars ms-1"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Ranking</a></li>
+                  </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="mt-5 page-section" id="about">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Livros</h2>
+            </div>
+            <ul class="timeline">
+                {% for livro in livros["livros"] %}
+                <li>
+                    <form action="/livro" method="GET">
+                        <input type="hidden" id="isbn" name="isbn" value={{livro.isbn}}>
+                        <input class="timeline-image rounded-circle" type="submit" value="Ver livro" />
+                    </form>
+                        
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4>{{livro.nome}}</h4>
+                            <h6 class="subheading">{{livro.autor}}</h6>
+                            
+                            <div class="timeline-body"><p class="text-muted"><strong>Editora:</strong> {{livro.editora}}</p></div>
+                            <div class="timeline-body"><p class="text-muted"><strong> Categoria:</strong> {{livro.categoria}}</p></div>
+                            <div class="timeline-body"><p class="text-muted"><strong> Numero de páginas:</strong> {{livro.numero_paginas}}</p></div>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+                <li class="timeline-inverted">
+                    <form action="/livro" method="GET">
+                        <input type="hidden" id="isbn" name="isbn" value={{livro.isbn}}>
+                        <input class="timeline-image rounded-circle" type="submit" value="Ver livro" />
+                    </form>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4>{{livro.nome}}</h4>
+                            <h6 class="subheading">{{livro.autor}}</h6>
+                            
+                            <div class="timeline-body"><p class="text-muted"><strong>Editora:</strong> {{livro.editora}}</p></div>
+                            <div class="timeline-body"><p class="text-muted"><strong> Categoria:</strong> {{livro.categoria}}</p></div>
+                            <div class="timeline-body"><p class="text-muted"><strong> Numero de páginas:</strong> {{livro.numero_paginas}}</p></div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        </section>
+
     {% for livro in livros["livros"] %}
         <div>
             <h1>{{livro.nome}}</h1> <br>
@@ -20,5 +90,10 @@
 
         </div>
     {% endfor %}
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
