--- a/P3/templates/livro.html
+++ b/P3/templates/livro.html
@@ -25,7 +25,7 @@
            </button>
            <div class="collapse navbar-collapse" id="navbarResponsive">
                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Ranking</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Ranking</a></li>
                     <form action="/livros" method="GET">
                         <li class="nav-item"><button class="btn-nav nav-link">Livros</button></li>
                       </form>
