--- a/P3/templates/index.html
+++ b/P3/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <title>Início</title>
     <script src="https://www.koolchart.com/demo/LicenseKey/codepen/KoolChartLicense.js"></script>
     <script src="https://www.koolchart.com/demo/KoolChart/JS/KoolChart.js"></script>
-    <link rel="stylesheet" href="https://www.koolchart.com/demo/KoolChart/Assets/Css/KoolChart.css"/>
+    <link rel="stylesheet" href="https://www.koolchart.com/demo/KoolChart/Assets/Css/KoolChart.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Favicon-->
@@ -16,13 +17,14 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="styles.css" rel="stylesheet" />
+    <link href="{{ url_for('static',filename='styles.css') }}" rel="stylesheet" />
 </head>
+
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+            <a class="navbar-brand" href="#page-top"><img src="{{ url_for('static',filename='assets/img/navbar-logo.svg') }}" alt="..." /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars ms-1"></i>
@@ -30,33 +32,33 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <form action="/livros" method="GET">
-                      <li class="nav-item"><button class="btn-nav nav-link">Livros</button></li>
+                        <li class="nav-item"><button class="btn-nav nav-link">Livros</button></li>
                     </form>
-                  </ul>
+                </ul>
             </div>
         </div>
     </nav>
 
     <section class="page-section bg-light mt-5">
-      <div class="container">
-          <div class="text-center">
-              <h2 class="section-heading text-uppercase">Ranking</h2>
-              <h3 class="section-subheading text-muted">Livros mais vendidos</h3>
-          </div>
-      </div>
-    
-      <form action="/" method="GET">
-        Ano: <input type="text" id="ano" name="ano"><br>
-        <br><input type="submit" value="Enviar" />
-    </form>
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Ranking</h2>
+                <h3 class="section-subheading text-muted">Livros mais vendidos</h3>
+            </div>
+        </div>
 
-      {{data}}
-    
+        <form action="/" method="GET">
+            Ano: <input type="text" id="ano" name="ano"><br>
+            <br><input type="submit" value="Enviar" />
+        </form>
+
+        {{data}}
+
     </section>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="js/scripts.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 
 </html>
