--- a/P3/templates/index.html
+++ b/P3/templates/index.html
@@ -44,6 +44,7 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Ranking</h2>
                 <h3 class="section-subheading text-muted">Livros mais vendidos</h3>
+                <img src={{img}}>
             </div>
         </div>
 
@@ -52,7 +53,6 @@
             <br><input type="submit" value="Enviar" />
         </form>
 
-        {{data}}
 
     </section>
     <!-- Bootstrap core JS-->
