--- a/P3/templates/livro.html
+++ b/P3/templates/livro.html
@@ -48,6 +48,8 @@
                 <p class="text-muted"></p>
             </div>
             LISTA DE EXEMPLARES É NO GRAFICO
+
+            <br><img src={{img}}>
         </div>
     </section>
 
