--- a/P3/templates/livros.html
+++ b/P3/templates/livros.html
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    {% for livro in livros["livros"] %}
+  <!--  {% for livro in livros["livros"] %}
     <div>
         <h1>{{livro.nome}}</h1> <br> Autor: {{livro.autor}} <br> Editora: {{livro.editora}} <br> Categoria: {{livro.categoria}} <br> Numero de páginas: {{livro.numero_paginas}} <br>
         <form action="/livro" method="GET">
@@ -77,7 +77,7 @@
         </form>
 
     </div>
-    {% endfor %}
+    {% endfor %}-->
 
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
