--- a/P3/templates/livro.html
+++ b/P3/templates/livro.html
@@ -47,7 +47,11 @@
                 <p class="text-muted"><strong> Numero de páginas:</strong> {{livro.numero_paginas}}</p>
                 <p class="text-muted"></p>
             </div>
-            <br><img src={{img}}>
+
+            <div class="mt-5 text-center">
+                <h4 class="text-primary section-heading text-uppercase">Cópias vendidas</h4>
+                <img src={{img}}>
+            </div>
         </div>
     </section>
 
