--- a/P3/templates/index.html
+++ b/P3/templates/index.html
@@ -62,6 +62,18 @@
         <div class="text-center">
             <h5 class="mt-5 section-heading text-uppercase">{{ano}}</h5>
             <img src={{img}}>
+            
+            <table class="table-primary table-bordered">
+                {% for %}
+                <tr>
+                    <td>"MES"</td>
+                    {% for %}
+                        <td></td>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+            </table>
+            
         </div>
 
     </section>
