--- a/P3/static/styles.css
+++ b/P3/static/styles.css
@@ -206,6 +206,11 @@ abbr[title] {
     text-decoration-skip-ink: none;
 }
 
+.table-img {
+    width: 80px;
+    height: 150px;
+}
+
 address {
     margin-bottom: 1rem;
     font-style: normal;
