--- a/P3/templates/index.html
+++ b/P3/templates/index.html
@@ -68,7 +68,7 @@
                 <tr>
                     <td>"MES"</td>
                     {% for %}
-                        <td></td>
+                        <td><img  class="table-img" src="" /></td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
