--- a/P3/static/styles.css
+++ b/P3/static/styles.css
@@ -207,8 +207,7 @@ abbr[title] {
 }
 
 .table-img {
-    width: 80px;
-    height: 150px;
+   
 }
 
 address {
@@ -2022,6 +2021,19 @@ progress {
     .table-responsive-sm {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
+    }
+   .img-responsive {
+        width: 300px;
+        height: 300px;
+
+    }
+}
+
+@media (max-width: 400px) {
+    .img-responsive {
+        width:200px;
+        height: 200px;
+
     }
 }
 
