--- a/P3/templates/livro.html
+++ b/P3/templates/livro.html
@@ -50,7 +50,7 @@
 
             <div class="mt-5 text-center">
                 <h4 class="text-primary section-heading text-uppercase">Cópias vendidas</h4>
-                <img src={{img}}>
+                <img class="img-responsive" src={{img}}>
             </div>
         </div>
     </section>
